# BN_demo

./: Cargo.toml  README.md
biodigestor-ui/: index.html  package-lock.json  package.json  vite.config.js
biodigestor-ui/src/: App.jsx  config.js
biodigestor-ui/src/components/: ControlPanel.jsx  Footer.jsx  GraphModal.jsx  GraphPanel.jsx  GraphViewer.jsx  Header.jsx
src/: build.rs  lib.rs
