[package]
name = "bn_demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"] # "cdylib" es necesario para WASM

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4" # Para pasar objetos JS a Rust fácilmente
getrandom = { version = "0.2", features = ["js"] } # Necesario si usas rand en suma_core
console_error_panic_hook = "0.1.7"
suma_core = "0.1.6"
