[package]
name = "bn_demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_assert = "0.8.0"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
suma_core = "0.1.18"

